# pcengine_rust

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  run.sh
.agent/: execplan-audio-completion.md
.cargo/: config.toml
cheats/: Dragon Spirit (Japan).json  Jaseiken Necromancer (Japan).json  Momotarou Densetsu II (Japan).json
examples/: analyze_frame.rs  audio_sdl.rs  audio_stub.rs  audio_timing_diag.rs  bat_compare.rs  bat_dump.rs  bat_text_check.rs  bikkuriman_diag.rs  bikkuriman_trace.rs  byr_commit_trace.rs  byr_trace.rs  byr_write_trace.rs  check_bat.rs  check_bat_raw.rs  check_before_tia.rs  check_colors.rs  check_display_area.rs  check_f300.rs  check_font_glyphs.rs  check_font_rom.rs  check_frame100.rs  check_frame120.rs  check_head_split.rs  check_mwr.rs  check_pal.rs  check_palette.rs  check_rcr.rs  check_render.rs  check_rom_text_area.rs  check_scroll.rs  check_scroll_lines.rs  check_text.rs  check_text_area.rs  check_tile_init.rs  check_tile_row0.rs  check_timer.rs  check_timer_isr.rs  check_title_top.rs  check_vdc_timing.rs  check_vectors.rs  (+157 more)
examples/common/: config.rs
examples/egui_ui/: cheat_search.rs  debugger.rs  gl_game.rs  hex_viewer.rs  mod.rs
src/: bus.rs  cheat.rs  cpu.rs  debugger.rs  emulator.rs  font6x8.rs  lib.rs  main.rs  vce.rs  vdc.rs
src/bus/: io.rs  mod.rs  render.rs  tests.rs  types.rs
src/cpu/: mod.rs  tests.rs
src/emulator/: mod.rs  tests.rs
src/psg/: mod.rs
